--- a/interactive-rating-component/index.html
+++ b/interactive-rating-component/index.html
@@ -12,32 +12,10 @@
 
 <body>
   <div>
-    <!-- Rating state start -->
 
-    How did we do?
-
-    Please let us know how we did with your support request. All feedback is appreciated
-    to help us improve our offering!
-
-    1 2 3 4 5
-
-    Submit
-
-    <!-- Rating state end -->
-
-    <!-- Thank you state start -->
-
-    You selected <!-- Add rating here --> out of 5
-
-    Thank you!
-
-    We appreciate you taking the time to give a rating. If you ever need more support,
-    don’t hesitate to get in touch!
-
-    <!-- Thank you state end -->
   </div>
-
-  <div id="root"></div>
+  <!--  -->
+  <main id="root"></main>
   <script type="module" src="/src/main.jsx"></script>
 
   <footer class="attribution">
